<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/latitude_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/latitudeLabel" />

            <TextView
                android:id="@+id/latitude_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/longitude_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/longitudeLabel" />

            <TextView
                android:id="@+id/longitude_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/distance_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/DistanceLabel" />

            <TextView
                android:id="@+id/distance_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/AVGSpeedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/AvgSpeed" />

            <TextView
                android:id="@+id/avg_speed_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/AccuracyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/Accuracy_Label" />

            <TextView
                android:id="@+id/Accuracy_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/StepsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/Steps_Label" />

            <TextView
                android:id="@+id/Steps_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/OrientationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/Orientation_Label" />

            <TextView
                android:id="@+id/Orientation_textResult"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/StartServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartServiceButton" />

    <Button
        android:id="@+id/StopServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StopServiceButton" />

    <Button
        android:id="@+id/UpdateValuesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UpdateValButton" />

    <Button
        android:id="@+id/AccuracyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AccuracyButton" />

    <Button
        android:id="@+id/ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExitButton" />

</LinearLayout>